--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
+        <nav class="navigation"></nav>
 
         <!-- Логотип -->
-            <!-- <a href="./index.html" class="logo">Web<span class="second-part-logo">Studio</span></a> -->
-            <a href="" class="img"><img src="./img/WebStudio1.png" alt="Logo">
+            <a href="" class="logo">Web<span class="second-part-logo">Studio</span>
             </a>
+            
         <!-- Элементы навигации -->
 
-        <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-item"> 
                 <a href="navigation-link">Студия</a>
@@ -32,8 +32,14 @@
         <!-- Контакты -->
 
         <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="telephon">+38 096 111 11 11</a>
+            <ul class="contacts-list">
+              <li>  
+                <a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a>
+              </li>
+                <li>
+                <a href="tel:+380961111111" class="telephon">+38 096 111 11 11</a>
+              </li>
+            </ul>
         </div>
 
     </header>
@@ -77,16 +83,24 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-member">
-                    <img src="./img/teamсard1.jpg" alt="Игорь Демьяненко" width="270">
+                    <img src="./img/teamcard1.jpg" alt="Игорь Демьяненко" width="270">
+                    <h2 class="name-member">Игорь Демьяненко</h2>
+                    <p class="speciality-member">Product Designer</p>                    
                 </li>
                 <li class="team-member">
                     <img src="./img/teamcard2.jpg" alt="Ольга Репина" width="270">
+                    <h2 class="name-member">Ольга Репина</h2>
+                    <p class="speciality-member">Frontend Developer</p>
                 </li>
                 <li class="team-member">
-                    <img src="./img/teamcard3.jpg" alt="Николай Тарасов">
+                    <img src="./img/teamcard3.jpg" alt="Николай Тарасов" width="270">
+                    <h2 class="name-member">Николай Тарасов</h2>
+                    <p class="speciality-member">Marketing</p>                  
                 </li>
                 <li class="team-member">
-                    <img src="./img/teamcard4.jpg" alt="Михаил Ермаков">
+                    <img src="./img/teamcard4.jpg" alt="Михаил Ермаков" width="270">
+                    <h2 class="name-member">Михаил Ермаков</h2>
+                    <p class="speciality-member">UI Designer</p>                       
                 </li>
             </ul>
         </section>
@@ -94,8 +108,8 @@
     <!-- Футер -->
 
     <footer class="adress-contacts">
+        <a href="" class="logo">Web<span class="second-part-logo">Studio</span>
         <h2 hidden>Адрес,электронная почта,телефон</h2>
-        <img src="./img/WebStudio2.png" alt="Logo">
             <ul class="adress-contacts-list">
                 <li class="adress"> 
                     <a href="https://www.google.com/maps/" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
