Внесены изменения в заголовки, удалены лишние теги

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,6 @@
 
         <!-- Контакты -->
 
-        <div class="contacts">
             <ul class="contacts-list">
               <li>  
                 <a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a>
@@ -40,8 +39,7 @@
                 <a href="tel:+380961111111" class="telephon">+38 096 111 11 11</a>
               </li>
             </ul>
-        </div>
-
+        
     </header>
 
     <main>
@@ -51,19 +49,24 @@
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-btn">Заказать услугу</button>
     </section>
+
     <section class="studio-qualities">
+        <h2 hidden>Преимущества</h2>
         <ul class="qualities-list">
-        <li> <h2 class="attention">Внимание к деталям</h2>
+        <li> 
+            <h3 class="attention">Внимание к деталям</h3>
         <p class="attention-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
-        <h2 class="punctuality">Пунктуальность</h2>
+            <h3 class="punctuality">Пунктуальность</h3>
         <p class="punctuality-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li> <h2 class="planning">Планирование</h2>
+        <li> 
+            <h3 class="planning">Планирование</h3>
         <p class="planning-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li> <h2 class="high-tech">Современные технологии</h2>
+        <li> 
+            <h3 class="high-tech">Современные технологии</h3>
         <p class="high-tech-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
         </ul>
@@ -72,10 +75,18 @@
     <!-- Деятельность -->
 
     <section class="activities">
-        <h3 class="activities-title">Чем мы занимаемся</h3>
-        <img src="./img/box1.jpg" alt="pic" width="370">
-        <img src="./img/box2.jpg" alt="pic" width="370">
-        <img src="./img/box3.jpg" alt="pic" width="370">
+        <h2 class="activities-title">Чем мы занимаемся</h2>
+        <ul>
+            <li> 
+                <img src="./img/box1.jpg" alt="pic" width="370">
+            </li>
+            <li> 
+                <img src="./img/box2.jpg" alt="pic" width="370">
+            </li>
+            <li>
+                <img src="./img/box3.jpg" alt="pic" width="370">
+            </li> 
+        </ul>
     </section>
 
     <!-- Команда тружеников -->
@@ -84,22 +95,22 @@
             <ul class="team-list">
                 <li class="team-member">
                     <img src="./img/teamcard1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h2 class="name-member">Игорь Демьяненко</h2>
+                    <h3 class="name-member">Игорь Демьяненко</h3>
                     <p class="speciality-member">Product Designer</p>                    
                 </li>
                 <li class="team-member">
                     <img src="./img/teamcard2.jpg" alt="Ольга Репина" width="270">
-                    <h2 class="name-member">Ольга Репина</h2>
+                    <h3 class="name-member">Ольга Репина</h3>
                     <p class="speciality-member">Frontend Developer</p>
                 </li>
                 <li class="team-member">
                     <img src="./img/teamcard3.jpg" alt="Николай Тарасов" width="270">
-                    <h2 class="name-member">Николай Тарасов</h2>
+                    <h3 class="name-member">Николай Тарасов</h3>
                     <p class="speciality-member">Marketing</p>                  
                 </li>
                 <li class="team-member">
                     <img src="./img/teamcard4.jpg" alt="Михаил Ермаков" width="270">
-                    <h2 class="name-member">Михаил Ермаков</h2>
+                    <h3 class="name-member">Михаил Ермаков</h3>
                     <p class="speciality-member">UI Designer</p>                       
                 </li>
             </ul>
@@ -109,7 +120,6 @@
 
     <footer class="adress-contacts">
         <a href="" class="logo">Web<span class="second-part-logo">Studio</span>
-        <h2 hidden>Адрес,электронная почта,телефон</h2>
             <ul class="adress-contacts-list">
                 <li class="adress"> 
                     <a href="https://www.google.com/maps/" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
